# cltest

./: .gitignore  CMakeLists.txt  ClContext_Impl.cxx  ClContext_Impl.hxx  ClContexts.hxx  ClDevice_Impl.cxx  ClDevice_Impl.hxx  ClDevices.cxx  ClDevices.hxx  ClPlatform_Impl.cxx  ClPlatform_Impl.hxx  ClPlatforms.cxx  ClPlatforms.hxx  ClPlatforms_Impl.cxx  ClPlatforms_Impl.hxx  ClReference.hxx  main.cxx
cmake/: FindOpenCL.cmake
